<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_user_name"
        android:title="User Name"
        android:enabled="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />

</menu>